<resources>
    <string name="app_name" translatable="false">iPatients</string>
    <string name="data_title">Patient information</string>
    <string name="complete_name">Full name</string>
    <string name="masculine">Masculine</string>
    <string name="feminine">Feminine</string>
    <string name="agreed_research">Agrees to take part in research</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="select_medical_plan">Select the medical plan:</string>
    <string name="about">About</string>
    <string name="patients">Patients</string>
    <string name="author_name_email" translatable="false"><![CDATA[Leonardo Vilela Pinheiro <leonardo@vilelapinheiro.com>]]></string>
    <string name="about_app">This is an app for medical doctors to register their patients</string>
    <string name="edit_patient">Edit patient</string>
    <string name="new_patient">New patient</string>
    <string name="add">Add</string>
    <string name="name_cant_be_empty">The name cannot be empty</string>
    <string name="please_select_sex">Please select the sex</string>
    <string name="have_cleared_fields">Fields cleared</string>
    <string name="go_back">Go back</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="doesn_agree">Doesn\'t agree</string>
    <string name="agrees">Agrees</string>
    <string name="settings">Settings</string>
    <string name="switch_night_mode_label">Night mode (not implemented yet)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_interface">Interface</string>
    <string name="explain_night_mode">Activate or deactivate the night mode</string>
    <string name="agree_with_research">Only who has agreed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_to_remove_patient">Are you sure you want to DELETE the patient?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appointments">Appointments</string>
    <string name="sex_twocolons">Sex:</string>
    <string name="medicalplan_twocolons">Medical Plan:</string>
    <string name="view_patient">View patient</string>
    <string name="id" translatable="false">ID</string>
    <string name="are_you_sure_to_remove_appointment">Are you sure to DELETE the appointment?</string>
    <string name="select_patient">Select the patient:</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="new_appointment">New Appointment</string>
    <string name="date_cant_be_empty">Date cannot be empty</string>
    <string name="date_twocolon">Date:</string>
    <string name="time_twocolon">Time:</string>
    <string name="patient_twocolon">Patient:</string>
</resources>