<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/pesquisaCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="268dp"
            android:text="@string/agreed_research"
            app:layout_constraintStart_toStartOf="@+id/spinnerConvenios"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameTexteditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/complete_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/sexoRadiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"

            android:layout_marginTop="20dp"
            >

            <RadioButton
                android:id="@+id/masculineRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculine" />

            <RadioButton
                android:id="@+id/feminineRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feminine" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerConvenios"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="@+id/sexoRadiogroup"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/select_medical_plan"
            app:layout_constraintBottom_toTopOf="@+id/spinnerConvenios"
            app:layout_constraintStart_toStartOf="@+id/spinnerConvenios" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>